force-app/main/default/objects/State_Inspection__c/State_Inspection__c.object-meta.xml
<CustomObject>
    <label>State Inspection</label>
    <nameField>
        <label>State Inspection Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>State Inspections</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>