force-app/main/default/objects/State_Inspection__c/fields/Equipment__c.field-meta.xml
<CustomField>
    <fullName>Equipment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Equipment</label>
    <referenceTo>Equipment__c</referenceTo>
    <relationshipLabel>State Inspections</relationshipLabel>
    <relationshipName>State_Inspections</relationshipName>
    <type>Lookup</type>
</CustomField>