force-app/main/default/objects/State_Inspection__c/fields/Inspection_Findings__c.field-meta.xml
<CustomField>
    <fullName>Inspection_Findings__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Inspection Findings</label>
    <referenceTo>Inspection_Findings__c</referenceTo>
    <relationshipLabel>State Inspections</relationshipLabel>
    <relationshipName>State_Inspections</relationshipName>
    <type>Lookup</type>
</CustomField>