force-app/main/default/objects/State_Inspection__c/fields/Inspection_ID__c.field-meta.xml
<CustomField>
    <fullName>Inspection_ID__c</fullName>
    <label>Inspection ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>