force-app/main/default/objects/State_Inspection__c/fields/Inspector_Name__c.field-meta.xml
<CustomField>
    <fullName>Inspector_Name__c</fullName>
    <label>Inspector Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>