force-app/main/default/objects/State_Inspection__c/fields/Inspector_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Inspector_Phone_Number__c</fullName>
    <label>Inspector Phone Number</label>
    <length>13</length>
    <type>Text</type>
</CustomField>