force-app/main/default/objects/State_Inspection__c/fields/Result__c.field-meta.xml
<CustomField>
    <fullName>Result__c</fullName>
    <label>Result</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>5YFIN</fullName>
            </value>
            <value>
                <fullName>5YISSUED</fullName>
            </value>
            <value>
                <fullName>ACTIVE</fullName>
                <label>Active</label>
            </value>
            <value>
                <fullName>CORRECTIONS REQ</fullName>
                <label>Corrections Req</label>
            </value>
            <value>
                <fullName>FAIL</fullName>
            </value>
            <value>
                <fullName>INCOMPLETE</fullName>
            </value>
            <value>
                <fullName>PASS</fullName>
            </value>
            <value>
                <fullName>PASS W/ COND</fullName>
            </value>
            <value>
                <fullName>PENDING</fullName>
            </value>
            <value>
                <fullName>TEMPCERT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>