force-app/main/default/objects/State_Inspection__c/fields/Type_of_Inspection__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Inspection__c</fullName>
    <label>Type of Inspection</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>