force-app/main/default/objects/State_Inspection__c/fields/Vendor_Equipment_Number__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Equipment_Number__c</fullName>
    <label>Vendor Equipment No</label>
    <length>10</length>
    <type>Text</type>
</CustomField>